<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    tools:context=".Fragment.ShopFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:gravity="center_vertical"
                android:padding="10dp"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cash_back"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/TicketsToMoney"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/showTicketsToMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="16dp"
                    android:text="@string/View" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:gravity="center_vertical"
                android:padding="10dp"
                tools:ignore="UselessLeaf">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/coupon"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/Promo_Code"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/showPromoCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="32dp"
                    android:paddingBottom="16dp"
                    android:text="@string/View" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:elevation="10dp"-->
        <!--            app:cardCornerRadius="10dp"-->
        <!--            app:cardUseCompatPadding="true">-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:background="@color/lightBlue"-->
        <!--                android:padding="10dp"-->
        <!--                tools:ignore="UselessLeaf">-->

        <!--                <ImageView-->
        <!--                    android:layout_width="50dp"-->
        <!--                    android:layout_height="50dp"-->
        <!--                    android:src="@drawable/advertisement"-->
        <!--                    tools:ignore="ContentDescription" />-->

        <!--                <LinearLayout-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="match_parent"-->
        <!--                    android:gravity="center"-->
        <!--                    android:orientation="vertical">-->

        <!--                    <TextView-->
        <!--                        android:layout_width="wrap_content"-->
        <!--                        android:layout_height="wrap_content"-->
        <!--                        android:layout_marginStart="10dp"-->
        <!--                        android:layout_marginEnd="10dp"-->
        <!--                        android:text="@string/GetTickets"-->
        <!--                        android:textColor="@color/white"-->
        <!--                        android:textSize="18sp" />-->

        <!--                </LinearLayout>-->

        <!--                <Space-->
        <!--                    android:layout_width="0dp"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_weight="1" />-->

        <!--                <Button-->
        <!--                    android:id="@+id/showAd"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:paddingStart="32dp"-->
        <!--                    android:paddingTop="16dp"-->
        <!--                    android:paddingEnd="32dp"-->
        <!--                    android:paddingBottom="16dp"-->
        <!--                    android:text="@string/Get" />-->

        <!--            </LinearLayout>-->

        <!--        </androidx.cardview.widget.CardView>-->

    </LinearLayout>

</FrameLayout>